[package]
name = "slice-diff-patch"
description = "Library crate providing utility functions for diff and patch of slices"
version = "1.3.0"
license = "MIT"
edition = "2024"
documentation = "https://docs.rs/slice-diff-patch"
homepage = "https://github.com/qtfkwk/slice-diff-patch"
repository = "https://github.com/qtfkwk/slice-diff-patch"

[dependencies]
diff = "0.1.13"
lcs-diff = "0.1.1"
wu-diff = "0.1.2"
